--- a/src/styles.css
+++ b/src/styles.css
@@ -112,6 +112,7 @@
   border-radius: 6px;
   background-color: #fffbf9;
   border: 1px solid #393939;
+  margin: 16px 0px 0px 16px;
 }
 
 .goal-button {
